--- a/contacts.html
+++ b/contacts.html
@@ -1,33 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Contact Us | Washington Commanders</title>
-    <link rel="icon" type="image/x-icon" href="images/logo.png">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Contact Us | Washington Commanders</title>
+    <link rel="icon" type="image/x-icon" href="images/logo.png">
+    <script>
+      function toggleMenu() {
+        const menuList = document.querySelector('.menu-list');
+        menuList.classList.toggle('show-menu');
+      }
+    </script>
   </head>
-  <body>
   <!--Navbar-->
   <header>
     <div class="navbar">
       <div class="container flex">
         <nav>
-          <ul>
-            <li><a href="index.html">Main</a></li>
-            <li>
-              <a href="#">Matches</a>
-              <ul>
-                <li><a href="#">Calendar of Matches</a></li>
-                <li><a href="#">Next Game</a></li>
-                <li><a href="#">Ratings</a></li>
-              </ul>
-            </li>
-            <li><a href="#">News</a></li>
-            <li><a href="#">Fans</a></li>
-            <li><a href="contacts.html">Contacts</a></li>
-            <li><a href="#">Admin</a></li>
-          </ul>
+          <span class="menu-icon" onclick="toggleMenu()">☰</span>
+          <div class="menu-list">
+            <ul>
+              <li><a href="index.html">Main</a></li>
+              <li>
+                <a href="#">Matches</a>
+                <ul>
+                  <li><a href="#">Calendar of Matches</a></li>
+                  <li><a href="#">Next Game</a></li>
+                  <li><a href="#">Ratings</a></li>
+                </ul>
+              </li>
+              <li><a href="#">News</a></li>
+              <li><a href="#">Fans</a></li>
+              <li><a href="contacts.html">Contacts</a></li>
+              <li><a href="#">Admin</a></li>
+            </ul>
+          </div>
         </nav>
       </div>
       <img id="rotatingImage" src="images/logo.png" alt="logo">
@@ -40,34 +49,27 @@
       <p>If you’d like to contact us via mail, our address is FedExField, 1600 Fedex Way, Landover MD 20785.</p>
       <p>Thanks for your questions and comments. We will get back to you as quickly as possible.</p>
       <div class="contact-column">
-        <div class="contact-info">
-          <div class="container">
-            <h1>Contact Us</h1>
-            <!-- Form -->
-            <form>
-              <label for="firstName">First Name:</label>
-              <input type="text" id="firstName" name="firstName" required autofocus>
-              <label for="lastName">Last Name:</label>
-              <input type="text" id="lastName" name="lastName" required>
-              <label for="email">Email:</label>
-              <input type="email" id="email" name="email" required>
-              <label for="inquiry">What can we help you with?</label>
-              <select id="inquiry" name="inquiry" required>
-                <option value="general">General Inquiry</option>
-                <option value="support">Support</option>
-                <option value="feedback">Feedback</option>
-              </select>
-              <label for="comments">Comments:</label>
-              <textarea id="comments" name="comments" rows="4" required></textarea>
-              <input type="submit" value="Submit Form">
-            </form>
-          </div>
+        <div class="container">
+          <h1>Contact Us</h1>
+          <!-- Form -->
+          <form>
+            <input type="text" id="firstName" name="firstName" placeholder="First Name" autofocus>
+            <input type="text" id="lastName" name="lastName" placeholder="Last Name" required>
+            <input type="email" id="email" name="email" placeholder="Email" required>
+            <select id="inquiry" name="inquiry" required>
+              <option value="general">General Inquiry</option>
+              <option value="support">Support</option>
+              <option value="feedback">Feedback</option>
+            </select>
+            <textarea id="comments" name="comments" rows="4" placeholder="Comments" required></textarea>
+            <input type="submit" value="Submit Form">
+          </form>
         </div>
       </div>
       <div id="container" class="map-column">
-        <a href="https://maps.app.goo.gl/EHF4UgRSsLR1qCMbA" target="_blank">
-          <img src="images/contact_map.png" alt="Map Image">
-        </a>
+        <div class="container">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3104.7118985986062!2d-76.8645064!3d38.9077031!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7bf8767ad5c43%3A0x4770659d01cbb79e!2sFedEx%20Field!5e0!3m2!1sen!2sua!4v1700410030287!5m2!1sen!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
       </div>
   </section>
   </main>
