--- a/contacts.html
+++ b/contacts.html
@@ -31,10 +31,10 @@
                   <li><a href="#">Ratings</a></li>
                 </ul>
               </li>
-              <li><a href="#">News</a></li>
-              <li><a href="#">Fans</a></li>
+              <li><a href="news.html">News</a></li>
+              <li><a href="fans.html">Fans</a></li>
               <li><a href="contacts.html">Contacts</a></li>
-              <li><a href="#">Admin</a></li>
+              <li><a href="admin.html">Admin</a></li>
             </ul>
           </div>
         </nav>
@@ -62,7 +62,7 @@
               <option value="feedback">Feedback</option>
             </select>
             <textarea id="comments" name="comments" rows="4" placeholder="Comments" required></textarea>
-            <input type="submit" value="Submit Form">
+            <input type="submit" value="Submit">
           </form>
         </div>
       </div>
