--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                   <li><a href="#">Ratings</a></li>
                 </ul>
               </li>
-              <li><a href="#">News</a></li>
-              <li><a href="#">Fans</a></li>
+              <li><a href="news.html">News</a></li>
+              <li><a href="fans.html">Fans</a></li>
               <li><a href="contacts.html">Contacts</a></li>
-              <li><a href="#">Admin</a></li>
+              <li><a href="admin.html">Admin</a></li>
             </ul>
           </div>
         </nav>
